--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server -p3001 --watch db.json"
+    "server": "json-server -p3001 --watch db.json",
+    "build:ui": "rm -rf dist && cd ../Helsinki-Full-Stack-Open/part2/phonebook && npm run build && cp -r dist ../HFSO-part3",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "dependencies": {
     "axios": "^1.3.6",
@@ -27,5 +29,6 @@
     "json-server": "^0.17.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
